[tool.poetry]
name = "phzipcodes"
version = "0.1.1"
description = "A Python package for Philippines zip codes"
authors = ["Jayson <jsoncp@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jayson-panganiban/phzipcodes"
keywords = ["philippines", "zipcode", "zipcodes", "postal code"]
include = ["phzipcodes/data/ph_zip_codes.json"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
aiohttp = "^3.10.8"
bs4 = "^0.0.2"
toolz = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
mypy = "^1.11.2"
types-beautifulsoup4 = "^4.12.0.20240907"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phzipcodes = "phzipcodes:app"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
